[metadata]
name = hyperpython
version = attr:hyperpython.__version__
description = Create HTML data structures using Python functions.
long_description = file: README.rst
author = Fábio Macêdo Mendes
author_email = fabiomacedomendes@gmail.com
url = https://github.com/fabiommendes/hyperpython/

keywords =
    web, html, templating
license = BSD License (BSD)
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Operating System :: OS Independent
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
platforms = all
include_package_data = True
install_requires =
    sidekick ~= 0.4.0
    markupsafe


[options.extras_require]
dev =
    invoke ~= 0.21
    flake8 ~= 3.5
    manuel ~= 1.8
    pytest ~= 3.2
    pytest-cov ~= 2.5
docs =
    docutils ~= 0.14
    sphinx-autobuild ~= 0.7



[options.package_data]
* = *.txt, *.rst, *.jinja2, *.html, *.js, *.css, *.scss
